Fixes: NB#213057 - [TASK] Camera; §qtn_cam_whitebalance_fluorescent§ med. translation is truncated.
RevBy: Esko Oramaa
Details: Added possibility to change elide (true|false) and text
wrapping mode (nowrap|wordwrap|wrapanywhere|wrapatwordboundaryoranywhere)
of the iconbutton label from css. By default the elide is set to
true and wrapping mode to nowrap.

--- a/tests/ft_mstylesheet/ft_mstylesheet_testobject.css
+++ b/tests/ft_mstylesheet/ft_mstylesheet_testobject.css
@@ -33,6 +33,8 @@ TestObjectStyle
     attribute-scalable2: C1-container-background 20 20 20 20;
     attribute-scalable3: "C1-container-background";
     attribute-scalable4: C1-container-background;
+    
+    attribute-wrap-mode: nowrap;
 }
 
 TestObject2Style
